objects/FO_Project_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Date__c</fullName>
        <label>Budget Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_Budget__c</fullName>
        <label>Conquest Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provision_Budget__c</fullName>
        <label>Provision Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stockwave_Budget__c</fullName>
        <label>Stockwave Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FO Project Budget</label>
    <nameField>
        <label>FO Project Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FO Project Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>